GH-551 Fix firefox bug
Add min-width and min-height to containers in order to ensure correct
use of flexbox. Firefox otherwise does not calculate the correct
viewport dimensions for the scrollbar to activate when content
overflows.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,6 @@ html {
    * So we add this style to force IE11 & Edge to use a "normal", non-overlapping, non-auto-hiding scrollbar.
    * See https://github.com/twbs/bootstrap/issues/18543
    */
-  -ms-overflow-style: -ms-autohiding-scrollbar;
   height: 100%;
 }
 
